Bug 377892 - Simple clipPath asserting and crashing. r+sr=tor